# employee-manager

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: base.py  connection.py  seeder.py
backend/app/dtos/: auth.py  employees.py  paginated_response.py  positions.py  service_orders.py  service_types.py  user.py
backend/app/entities/: employee.py  position.py  service_order.py  service_type.py  user.py
backend/app/enums/: employee_status.py  employee_type.py  payment_method.py  service_order_status.py  user_role.py  work_session_status.py
backend/app/mappers/: employee_mapper.py  position_mapper.py  service_order_mapper.py  service_type_mapper.py  user_mapper.py
backend/app/middleware/: get_db.py  get_token.py
backend/app/models/: __init__.py  employee.py  position.py  service_order.py  service_type.py  user.py
backend/app/protocols/: usecase.py
backend/app/repositories/: employee_repository.py  position_repository.py  service_order_repository.py  service_type_repository.py  user_repository.py
backend/app/routers/: auth.py  employees.py  positions.py  service_orders.py  service_types.py  users.py
backend/app/services/: auth_service.py  hash_service.py
backend/migrations/: env.py
backend/migrations/versions/: 030cff61dd3b_position_created_at_field.py  04c88f98d3b8_position_table.py  05fea3404a08_update_users_mapped_columns.py  477d714a7db2_creating_user_table.py  4887279e98ea_optional_reason.py  4c123aae814e_creating_user_table2.py  5751a94bdc9b_service_type_table.py  (+11 more)
(+64 files in other folders)
